import * as React from "react";
import renderer from "react-test-renderer";
import { Button, GatsbyButton } from ".";

describe("Button", (): void => {
  it("renders correctly", (): void => {
    const tree = renderer
      .create(<Button href="/test">Test Link</Button>)
      .toJSON();
    expect(tree).toMatchSnapshot();
  });
});

describe("GatsbyButton", (): void => {
  it("renders correctly", (): void => {
    const tree = renderer
      .create(<GatsbyButton to="/test">Test Gatsby Link</GatsbyButton>)
      .toJSON();
    expect(tree).toMatchSnapshot();
  });
});
