// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly 1`] = `
.emotion-0 {
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px solid transparent;
  border-radius: 4px;
  box-shadow: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 2.25em;
  line-height: 1.5;
  position: relative;
  vertical-align: top;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-width: 1px;
  cursor: pointer;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-bottom: calc(0.375em - 1px);
  padding-left: 0.75em;
  padding-right: 0.75em;
  padding-top: calc(0.375em - 1px);
  text-align: center;
  white-space: nowrap;
  border-color: transparent;
  font-size: 1.5rem;
}

.emotion-0:hover {
  background-color: #f9f9f9;
}

.emotion-0:active {
  background-color: #f2f2f2;
}

@media (prefers-color-scheme:dark) {
  .emotion-0:hover {
    background-color: #606060;
  }

  .emotion-0:active {
    background-color: #d0d0d0;
  }
}

<a
  className="emotion-0"
  href="/test"
>
  Test Link
</a>
`;

exports[`GatsbyButton renders correctly 1`] = `
.emotion-0 {
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px solid transparent;
  border-radius: 4px;
  box-shadow: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 2.25em;
  line-height: 1.5;
  position: relative;
  vertical-align: top;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-width: 1px;
  cursor: pointer;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-bottom: calc(0.375em - 1px);
  padding-left: 0.75em;
  padding-right: 0.75em;
  padding-top: calc(0.375em - 1px);
  text-align: center;
  white-space: nowrap;
  border-color: transparent;
  font-size: 1.5rem;
}

.emotion-0:hover {
  background-color: #f9f9f9;
}

.emotion-0:active {
  background-color: #f2f2f2;
}

@media (prefers-color-scheme:dark) {
  .emotion-0:hover {
    background-color: #606060;
  }

  .emotion-0:active {
    background-color: #d0d0d0;
  }
}

<a
  className="emotion-0"
  href="/test"
>
  Test Gatsby Link
</a>
`;
